[project]
name = "advanced-rag-techniques"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "chromadb>=0.5.3",
    "langchain>=0.1.0",
    "langchain-community>=0.0.29",
    "langchain-text-splitters>=0.0.1",
    "matplotlib>=3.9.0",
    "numpy>=1.26.0",
    "openai>=1.60.0",
    "pandas>=2.0.0",
    "pypdf>=5.1.0",
    "python-dotenv>=1.0.0",
    "sentence-transformers>=2.0.0",
    "torch>=2.0.0",
    "transformers>=4.0.0",
    "umap-learn>=0.5.0",
]
